# ACI-DQN

./: .gitignore  PROJECT_ARCHITECTURE.txt  README.md  __init__.py  _common.py  _explore_trace.py  _heuristic_runner.py  analysis_plots.py  config.yaml  generate_figures.py  main.py  pyproject.toml  requirements.txt  stress_test_scenarios.py  trace_preprocess.py  train_cloud.ipynb
.claude/: settings.local.json
configs/scenarios/: E0_easy.yaml  E1_normal_hard.yaml  E2_distribution_shift.yaml  E3_bursty_uncertainty.yaml  E4_capacity_cliff.yaml
outputs/: aci_dqn_training_history.csv  action_debug_aci_dqn.csv  action_debug_dqn.csv  action_debug_dtaci_dqn.csv  action_distribution.csv  daily_results.csv  dqn_model.pt  dqn_training_history.csv  dtaci_dqn_training_history.csv  experiment_summary.csv  stress_test_results.csv
outputs/models/: aci_dqn.pt  dqn.pt  dtaci_dqn.pt
outputs/processed/: complete_days_summary.csv  train_cal_test_split.csv
outputs/stress_test/: stress_scenario_results.csv
outputs/trace/: trace_summary.csv
src/: __init__.py  data_preprocess.py  datacenter_env.py  price_model.py  scenarios.py  trace_loader.py  utils.py  workload_generator.py
src/baselines/: __init__.py  conformal_greedy_policy.py  fixed_policy.py  forecast_greedy_policy.py  price_aware_greedy_policy.py  queue_greedy_policy.py
src/conformal/: __init__.py  aci.py  dtaci.py  forecaster.py  split_conformal.py
src/evaluation/: metrics.py  plot.py
src/rl/: __init__.py  augmenters.py  dqn_agent.py  (+2 more)
tests/: __init__.py  _fixtures.py  test_dtaci.py  test_env.py  test_shield.py
(+2 files in other folders)
